# rumble-device-driver

./: .gitignore  ARCHITECTURE.md  CHECKLIST.md  FIXES.md  INSTALL.md  Makefile  PROJECT_OVERVIEW.md  QUICKREF.md  README.md  Readme.md  SANITY_CHECK_REPORT.md  SUMMARY.md  run.py  setup.sh
driver/: .Module.symvers.cmd  .modules.order.cmd  .rumble.ko.cmd  .rumble.mod.cmd  .rumble.mod.o.cmd  .rumble.o.cmd  Makefile  rumble.c  rumble.h  rumble.ko  rumble.mod  rumble.mod.c
mouse/: 60-rumble-uinput.rules  Makefile  README.md  __init__.py  rumble.c  rumble.h  rumble_mouse.py
ros2/: README.md
ros2/rumble_teleop/: package.xml  setup.py
ros2/rumble_teleop/rumble_teleop/: __init__.py  rumble_teleop_node.py
rumble_dash/: README.md  pyproject.toml
rumble_dash/rumble_dash/: __init__.py  __main__.py  abi.py  hotplug.py  reader.py  store.py
rumble_dash/rumble_dash/ui/: app.py  theme.py
rumble_dash/rumble_dash/ui/panels/: buttons.py  circularity.py  debug.py  rumble.py  status.py  sticks.py  timing.py  triggers.py
scripts/: 99-rumble.rules  README.md  bind.sh  setup.sh  teardown.sh  unbind.sh
tools/: MOUSE_MAPPER.md  Makefile  README.md  rumble_monitor.c  rumble_mouse.c  rumble_read.c  test_read  test_read.c
