<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rumble_teleop</name>
  <version>1.0.0</version>
  <description>
    ROS 2 teleoperation node for TurtleBot3 using the rumble Xbox 1708
    character device driver.  Reads raw controller input from /dev/rumble0,
    publishes geometry_msgs/Twist to /cmd_vel, and provides haptic collision
    feedback via the controller's rumble motors.
  </description>

  <maintainer email="pathfinders@example.com">PathFinders</maintainer>
  <license>GPL-2.0-only</license>

  <author email="pathfinders@example.com">PathFinders</author>

  <!-- Build tool -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime dependencies -->
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>

  <!-- Test dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
